# DS4gyro

./: CMakeLists.txt  README.md
Dualshock4/ofx/: ofxDS4.cpp  ofxDS4.h
src/core/: DS4gyro.cpp  DS4gyro.hpp
src/example/: main.cpp
src/hidapi/: hid.c
src/ofx/: ofxDS4.cpp  ofxDS4.h
